# gopro_ros2

./: CMakeLists.txt  README.md  gopro_to_asl.cpp  gopro_to_rosbag.cpp  package.xml
cmake_modules/: Findffmpeg.cmake
include/: ImuExtractor.h  Utils.h  VideoExtractor.h
launch/: gopro_to_asl.xml  gopro_to_rosbag.xml
src/: ImuExtractor.cpp  Utils.cpp  VideoExtractor.cpp
