<package format="3">
  <name>gopro_ros2</name>
  <version>0.0.1</version>
  <description>GoPro video information extractor and save to ROS2 bag.</description>

  <maintainer email="bjoshi@email.sc.edu">Bharat Joshi</maintainer>
  <author email="bjoshi@email.sc.edu">Bharat Joshi</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage_default_plugins</depend>

  <!-- Math / Vision libraries -->
  <depend>eigen</depend>          <!-- maps to libeigen3-dev -->
  <depend>opencv</depend>         <!-- maps to libopencv-dev -->

  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
